--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "start": "node server.js",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "zustand": "^4.0.0-rc.1"
