--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "express": "^4.18.1",
     "react": "^18.0.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-simple-keyboard": "^3.4.158",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
